# thread-be-rs

./: .env  .gitignore  .rustfmt.toml  Cargo.toml  README.md  docker-compose.yml  setup_git.sh  sqlite.db
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  question.yml
.setup_git/: .gitmessage
.setup_git/hooks/: commit-msg
migrations/: 001_create-user.sql  002_create-thread.sql  003_create-follow.sql  004_create-likes.sql  004_create-upvote.sql  004_create-votes.sql  005_create-views.sql  006_dummy-data.sql  006_insert-user.sql
src/: error.rs  main.rs
src/api/: follow_ctrl.rs  mod.rs  server.rs  state.rs  thread_ctrl.rs  user_ctrl.rs
src/api/handlers/: auth_handlers.rs  follow_handlers.rs  mod.rs  thread_handlers.rs  user_handlers.rs  votes_handlers.rs
src/api/middleware/: auth_middleware.rs  log_middleware.rs  mod.rs
src/api/routes/: auth_routes.rs  mod.rs  thread_routes.rs  user_routes.rs
src/config/: app_state.rs  env.rs  mod.rs  router.rs
src/domain/dto/: mod.rs  thread.rs  user.rs
src/domain/model/: cursor_claims.rs  follow.rs  jwt_claims.rs  mod.rs  thread.rs  user.rs  votes.rs
src/middleware/: auth_middleware.rs  log_middleware.rs
src/repository/: follow_repo.rs  mod.rs  thread_repo.rs  user_repo.rs  views_repo.rs  votes_repo.rs
src/services/: follow_service.rs  mod.rs  thread_service.rs  user_service.rs  votes_service.rs
src/utils/: crypto.rs  cursor.rs  mod.rs
