[package]
name = "thread-be-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# tokio / axum
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.8.1", features = ["macros"] }
# sql
sqlx = { version = "0.8.3", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "chrono",
] }
# serde / json
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
# for DB DateTime
chrono = { version = "0.4.39", features = ["serde"] }
chrono-tz = "0.10.1"
# environment
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
# JWT Auth
jsonwebtoken = "9.3"
# hashing password
bcrypt = "0.17.0"
# logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
async-trait = "0.1.86"

[dev-dependencies]
anyhow = "1.0.95"
reqwest = { version = "0.12.12", features = ["json"] }
